2022-10-10T08:34:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217916596
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 49 172 / 59 188
* notice: next accum: outdated-unq outdated-all / unq all: 49 172 / 60 188
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-26 2022-10-10]

2022-10-09T16:31:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3214806240
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 48 171 / 58 187
* notice: next accum: outdated-unq outdated-all / unq all: 49 172 / 59 188
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-09-25] / [2022-10-09]

2022-10-09T02:11:00Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3212553911
* notice: last 14d: unq all: 2 16
* notice: prev accum: outdated-unq outdated-all / unq all: 48 171 / 57 186
* notice: next accum: outdated-unq outdated-all / unq all: 48 171 / 58 187
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-08]

2022-10-08T16:30:41Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3211059650
* notice: last 14d: unq all: 2 15
* notice: prev accum: outdated-unq outdated-all / unq all: 47 170 / 57 186
* notice: next accum: outdated-unq outdated-all / unq all: 48 171 / 57 186
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-24] / []

2022-10-08T01:53:39Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3208713965