@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-10T08:34:59Z",
-  "count_outdated" : 172,
-  "uniques_outdated" : 49,
-  "count" : 188,
+  "timestamp" : "2022-10-10T16:35:12Z",
+  "count_outdated" : 174,
+  "uniques_outdated" : 50,
+  "count" : 190,
   "uniques" : 60,
   "clones" : [
-    {
-      "timestamp": "2022-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-27T00:00:00Z",
       "count": 2,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
