@@ -1,3 +1,11 @@
+2022-10-10T16:35:12Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3220931007
+* notice: last 14d: unq all: 2 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 49 172 / 60 188
+* notice: next accum: outdated-unq outdated-all / unq all: 50 174 / 60 190
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-26] / [2022-10-10]
+
 2022-10-10T08:34:59Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217916596
 * notice: last 14d: unq all: 2 16
